--- a/index.html
+++ b/index.html
@@ -5,31 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer-Portfolio</title>
+    <title>Developer Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="top-banner">
         <div class="half-width">
-            <h1 class="header">Welcome TO</h1>
-            <h1 class="header">Ridoy Khan
-                <span>World</span>
-            </h1>
+            <h1>Welcome To</h1>
+            <h1><span>Ridoy Khan's</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, mollitia. Ab nulla voluptas ad numquam
-                velit cum. Nemo possimus adipisci neque dolore accusamus, provident debitis dolorem temporibus,
-                cupiditate vel assumenda pariatur, quos doloribus tenetur officia nihil modi enim praesentium cum earum
-                quod! Doloremque officiis accusantium et delectus nihil, labore veniam!</p>
-            <a href="https://www.facebook.com/ridoykhan.0110/" class="anchor-button" target="_blank">Hire Me</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum corrupti, tenetur molestias aspernatur
+                reprehenderit architecto repellendus consectetur error amet, rerum odio temporibus perspiciatis. Quis
+                amet rerum libero earum quaerat. Nostrum.</p>
+            <a href="https://www.facebook.com/ridoykhan.0110/" class="anchor-tag" target="_blank">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="image/Ridoy2.jpg" alt="">
         </div>
-
     </section>
 
 </body>
