first section done

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             <h3>Build Climber and Train Stopper</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum corrupti, tenetur molestias aspernatur
                 reprehenderit architecto repellendus consectetur error amet, rerum odio temporibus perspiciatis. Quis
-                amet rerum libero earum quaerat. Nostrum.</p>
+                amet rerum libero earum quaerat.
+                consectetur error amet, rerum odio temporibus perspiciatis. Nostrum.</p>
             <a href="https://www.facebook.com/ridoykhan.0110/" class="anchor-tag" target="_blank">Hire Me</a>
         </div>
         <div class="half-width">
-            <img src="image/Ridoy2.jpg" alt="">
+            <img src="image/my-bg.png" alt="">
         </div>
     </section>
 
