--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             <img src="image/my-bg.png" alt="">
         </div>
     </section>
+    <section class="my-resume">
+        <div class="half-width">
+            <img src="image/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet molestias harum non nesciunt nam, vel
+                corrupti facilis ratione magni reiciendis fugit porro reprehenderit repellendus voluptatem ea quia
+                nihil. Tempora, nostrum.</p>
+            <a href="https://www.facebook.com/ridoykhan.0110/" class="anchor-tag">download resume</a>
+        </div>
+    </section>
 
 </body>
 
