mini-portfolio-ready

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span>Ridoy Khan's</span> World</h1>
+            <h1><span class="orange-color">Ridoy Khan's</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum corrupti, tenetur molestias aspernatur
                 reprehenderit architecto repellendus consectetur error amet, rerum odio temporibus perspiciatis. Quis
@@ -28,7 +28,7 @@
             <img src="image/my-bg.png" alt="">
         </div>
     </section>
-    <section class="my-resume">
+    <section class="my-resume flexible-container">
         <div class="half-width">
             <img src="image/my-bg2.png" alt="">
         </div>
@@ -41,7 +41,31 @@
             <a href="https://www.facebook.com/ridoykhan.0110/" class="anchor-tag">download resume</a>
         </div>
     </section>
+    <section class="my-experiences">
+        <h1 class="experiences">Experiences</h1>
+        <div class="perent flexible-container">
+            <div class="experiences-item">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis deserunt quidem ea quia nobis saepe,
+                    quaerat nostrum animi rerum iure provident, porro eaque dicta obcaecati recusandae nemo. Explicabo,
+                    provident laboriosam veniam adipisci eveniet mollitia sit sunt aliquid fugit, minus autem!
+                    Dignissimos
+                    ab illo deleniti inventore, et sit incidunt sed corporis</p>
+            </div>
+            <div class="experiences-item blue-border">
+                <h1>Learning Web Development </h1>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis deserunt quidem ea quia nobis saepe,
+                    quaerat nostrum animi rerum iure provident, porro eaque dicta obcaecati recusandae nemo. Explicabo,
+                    provident laboriosam veniam adipisci eveniet mollitia sit sunt aliquid fugit, minus autem!
+                    Dignissimos
+                    ab illo deleniti inventore, et sit incidunt sed corporis</p>
+            </div>
+        </div>
+    </section>
 
 </body>
+<footer> &copy;Copyright 2022 Ridoy Khan | All rights reserved.</footer>
 
 </html>
